--- a/app/index.html
+++ b/app/index.html
@@ -14,15 +14,13 @@
 
 <body>
 	<div class="wrapper">
-		<div class="container-fluid p-0">
+		<div class="container-fluid p-0 mt-auto">
 			@@include('_header.html')
 
 
 			@@include('_sidebar.html')
 
 			<main class="main">
-
-
 				<div class="actions">
 					<div class="container ms-0">
 						<div class="actions__inner d-flex align-items-center justify-content-between">
